--- a/index.html
+++ b/index.html
@@ -595,19 +595,19 @@
             <div class="info">
                 <div class="time">
                     <div class="unit">
-                        <span>15</span>
+                        <span class="days">15</span>
                         <span>days</span>
                     </div>
                     <div class="unit">
-                        <span>08</span>
+                        <span class="hours">08</span>
                         <span>hours</span>
                     </div>
                     <div class="unit">
-                        <span>45</span>
+                        <span class="minutes">45</span>
                         <span>minutes</span>
                     </div>
                     <div class="unit">
-                        <span>55</span>
+                        <span class="seconds">55</span>
                         <span>seconds</span>
                     </div>
                 </div>
@@ -627,9 +627,9 @@
     <!-- end events  -->
     <!-- start pricing  -->
     <div class="pricing" id="pricing">
-        <h2 class="main-title">pricing plans</h2>
         <div class="dots dots-up"></div>
         <div class="dots dots-down"></div>
+        <h2 class="main-title">pricing plans</h2>
         <div class="container">
             <div class="plan">
                 <h3>basic</h3>
